syntax = "proto3";

package pb;

option go_package = "github.com/EmilioCliff/payment-polling-service/shared-grpc/pb";

message GetUserRequest {
    string email = 1;
}

message GetUserResponse {
    int64  user_id = 1;
    string payd_username = 2;
    string payd_username_key = 3;
    string payd_password_key = 4;
    string payd_account_id = 5;
}